namespace java edu.uchicago.mpcs53013.uberDataIngest

struct UberRecord2015 {
    1: required string dispatchBase;
    2: required i16 year;
    3: required byte month;
    4: required byte day;
    5: required byte hour;
    6: required byte minute;
    7: required byte second;
    8: required string base;
    9: required i16 locationID;
}



